<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Passenger">

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rate"
        android:contentDescription="@string/bookImgBtn"
        android:onClick="RatingImgBtnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/profile"
        android:contentDescription="@string/profileImgBtn"
        android:onClick="MyProfileImgBtnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/book"
        android:contentDescription="@string/bookImgBtn"
        android:onClick="BookingImgBtnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/mybookings"
        android:contentDescription="@string/myBookingsImgBtn"
        android:onClick="MyBookingsImgBtnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="148dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/rating"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="148dp"
        android:layout_height="31dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/myprofile"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="148dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mybookings"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="148dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/bookNow"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>